# helm-me-up-man

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
ci/: before_deploy.sh  install.sh
examples/: argocd-values.yaml  fluentd.values.TEST.yaml  fluentd.values.yaml  infra.helmsman.config.yaml  local.helmsman.config.yaml  monitoring.helmsman.config.yaml
examples/datadog/: helmsman.config.yaml  values.yaml
examples/fluentd/: helmsman.config.yaml
src/: main.rs
