[package]
name = "hmum"
version = "0.2.0"
authors = ["Alexandru Chiritescu <alex@alexchiri.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.9"
serde =  { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
url = "2.1.1"
ureq = "0.11.4"
tempfile = "3.1.0"
anyhow = "1.0.26"
rand = "0.7.3"
tar = "0.4.26"
flate2 = "1.0.13"
log = "0.4.8"
clap-verbosity-flag = "0.3.1"
regex = "1.3.4"
simple_logger = "1.5.0"